--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,40 @@
 {
-  "name": "wp-launchpad/context",
-  "description": "Context module for Launchpad",
-  "minimum-stability": "dev",
-  "keywords": [
-    "wordpress"
-  ],
-  "license": "GPL-2.0-or-later",
-  "authors": [
-    {
-      "name": "CrochetFeve0251"
+    "name": "wp-launchpad/context",
+    "description": "Context module for Launchpad",
+    "keywords": [
+        "wordpress"
+    ],
+    "license": "GPL-2.0-or-later",
+    "authors": [
+        {
+            "name": "CrochetFeve0251"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "LaunchpadContext\\": "inc/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "LaunchpadContext\\Tests\\": "tests/"
+        }
+    },
+    "require": {
+        "wp-launchpad/core": "^3.1"
+    },
+    "require-dev": {
+        "wp-media/phpunit": "^3.0"
+    },
+    "scripts": {
+        "test-integration": "\"vendor/bin/phpunit\" --testsuite integration --colors=always --configuration tests/Integration/phpunit.xml.dist --exclude-group AdminOnly",
+        "run-tests": [
+            "@test-integration"
+        ]
+    },
+    "extra": {
+        "branch-alias": {
+            "feature/ll-subscribers": "3.1-dev"
+        }
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "LaunchpadContext\\": "inc/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "LaunchpadContext\\Tests\\": "tests/"
-    }
-  },
-  "require": {
-    "wp-launchpad/core": "^0.3 || @dev"
-  },
-  "require-dev": {
-    "wp-media/phpunit": "^3.0"
-  },
-  "scripts": {
-    "test-integration": "\"vendor/bin/phpunit\" --testsuite integration --colors=always --configuration tests/Integration/phpunit.xml.dist --exclude-group AdminOnly",
-    "run-tests": [
-      "@test-integration"
-    ]
-  }
 }
