--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "extra": {
         "branch-alias": {
-            "feature/ll-subscribers": "3.1-dev"
+            "dev-feature/ll-subscribers": "3.1-dev"
         }
     }
 }
